--- a/AspnetNote/Views/Account/Register.cshtml
+++ b/AspnetNote/Views/Account/Register.cshtml
@@ -1,24 +1,24 @@
-﻿
+﻿@model AspnetNote.Models.User
 <h2>Register</h2>
 
-<form class="form-horizontal" method="post">
+<form class="form-horizontal" method="post" asp-controller="Account" asp-action="Register">
 	<div class="form-group">
 		<label>User ID</label>
-		<input type="text" class="form-control" placeholder="User ID enter"/>
+		<input type="text" class="form-control" asp-for="UserId" placeholder="User ID enter"/>
 	</div>
 	
 	<div class="form-group">
 		<label>User Security Number</label>
-		<input type="text" class="form-control" placeholder="User security number enter"/>
+		<input type="text" class="form-control" asp-for="UserPassword" placeholder="User security number enter"/>
 	</div>
 	
 	<div class="form-group">
 		<label>User Name</label>
-		<input type="text" class="form-control" placeholder="User name enter"/>
+		<input type="text" class="form-control" asp-for="UserName" placeholder="User name enter"/>
 	</div>
 
 	<div class="form-group">
 		<button type="submit" class="btn btn-primary">Register</button>
-		<a clss="btn btn-warning" href="#">Cancel</a>
+		<a class="btn btn-warning" href="#">Cancel</a>
 	</div>
 </form>
