--- a/AspnetNote/Views/Account/Login.cshtml
+++ b/AspnetNote/Views/Account/Login.cshtml
@@ -1,7 +1,23 @@
-﻿
-@{
-    ViewData["Title"] = "Login";
-}
+﻿@model AspnetNote.ViewModel.LoginViewModel
 
 <h2>Login</h2>
+
+<form class="form-horizontal" method="post" asp-controller="Account" asp-action="Login">
+	<div class="text-danger" asp-validation-summary="ModelOnly"></div>
+	<div class="form-group">
+		<lablel>UserID</lablel>
+		<input type="text" asp-for="UserId" class="form-control" placeholder="You are ID Enter"/>
+		<span class="text-danger" asp-validation-for="UserId"></span>
+	</div>
+
+	<div class="form-group">
+		<label>Password</label>
+		<input type="password" asp-for="UserPassword" class="form-control" placeholder="Your are User Password Enter" />
+		<span class="text-danger" asp-validation-for="UserPassword"></span>
+	</div>
+
+	<div class="form-group">
+		<button type="submit" class="btn btn-success">Login</button>
+	</div>
+</form>
 
