Login session part add

--- a/AspnetNote/Views/Shared/_Layout.cshtml
+++ b/AspnetNote/Views/Shared/_Layout.cshtml
@@ -33,8 +33,16 @@
 					<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-					<li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+					@if (Context.Session.GetInt32("USER_LOGIN_KEY") == null)
+					{
+						<li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
+						<li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+					}
+					else
+					{
+						<li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+					}
+
 				</ul>
 			</div>
         </div>
