--- a/AspnetNote/Views/Note/Add.cshtml
+++ b/AspnetNote/Views/Note/Add.cshtml
@@ -1,7 +1,26 @@
-﻿
-@{
-    ViewData["Title"] = "Add";
-}
+﻿@model AspnetNote.Models.Note
 
-<h2>Add</h2>
+<div class="row">
+	<div class="col-lg-4"></div>
+	<div class="col-lg-4">
+		<form class="form-horizontal" method="post" asp-controller="Note" asp-action="Add">
+			<div class="text-danger" asp-validation-summary="ModelOnly"></div>
+			<div class="form-group">
+				<label>Title Name</label>
+				<input type="text" class="form-control" asp-for="NoteTitle" placeholder="Enter Title" />
+				<span class="text-danger" asp-validation-for="NoteTitle"></span>
+			</div>
+			<div class="form-group">
+				<textarea class="form-control" rows="20" asp-for="NoteContents" placeholder="Enter contents"></textarea>
+				<span class="text-danger" asp-validation-for="NoteContents"></span>
+			</div>
+
+			<div class="form-group">
+				<button type="submit" class="btn btn-primary">Save</button>
+				<a class="btn btn-default" asp-controller="Note" asp-action="Index">Cancell</a>
+			</div>
+		</form>
+	</div>
+	<div class="col-lg-4"></div>
+</div>
 
