bug fixed note.cs type misstake

--- a/AspnetNote/Views/Note/Index.cshtml
+++ b/AspnetNote/Views/Note/Index.cshtml
@@ -11,8 +11,8 @@
 		{
 			<tr>
 				<td>@note.NoteNo</td>
-				<td>@note.NoteTittle</td>
-				<td>@note.UserNO</td>
+				<td>@note.NoteTitle</td>
+				<td>@note.UserNo</td>
 			</tr>	
 		}
 
