--- a/AspnetNote/Views/Note/Add.cshtml
+++ b/AspnetNote/Views/Note/Add.cshtml
@@ -1,8 +1,8 @@
 ﻿@model AspnetNote.Models.Note
 
 <div class="row">
-	<div class="col-lg-4"></div>
-	<div class="col-lg-4">
+	<div class="col-lg-2"></div>
+	<div class="col-lg-8">
 		<form class="form-horizontal" method="post" asp-controller="Note" asp-action="Add">
 			<div class="text-danger" asp-validation-summary="ModelOnly"></div>
 			<div class="form-group">
@@ -11,7 +11,7 @@
 				<span class="text-danger" asp-validation-for="NoteTitle"></span>
 			</div>
 			<div class="form-group">
-				<textarea class="form-control" rows="20" asp-for="NoteContents" placeholder="Enter contents"></textarea>
+				<textarea class="form-control editor" rows="20" asp-for="NoteContents" placeholder="Enter contents"></textarea>
 				<span class="text-danger" asp-validation-for="NoteContents"></span>
 			</div>
 
@@ -21,6 +21,6 @@
 			</div>
 		</form>
 	</div>
-	<div class="col-lg-4"></div>
+	<div class="col-lg-2"></div>
 </div>
 
