--- a/AspnetNote/Views/Shared/_Layout.cshtml
+++ b/AspnetNote/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 
 	<environment include="Development">
 		<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="~/lib/Trumbowyg/ui/trumbowyg.min.css" />
 		<link rel="stylesheet" href="~/css/site.css" />
 	</environment>
 	<environment exclude="Development">
@@ -62,6 +63,7 @@
 	<environment include="Development">
 		<script src="~/lib/jquery/dist/jquery.js"></script>
 		<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="~/lib/Trumbowyg/trumbowyg.min.js"></script>
 		<script src="~/js/site.js" asp-append-version="true"></script>
 	</environment>
 	<environment exclude="Development">
