--- a/AspnetNote/Views/Note/Detail.cshtml
+++ b/AspnetNote/Views/Note/Detail.cshtml
@@ -11,7 +11,7 @@
 				<label>Title :</label> @Model.NoteTitle
 			</div>
 			<div class="panel-body">
-				@Model.NoteContents
+				@Html.Raw(Model.NoteContents)
 			</div>
 			<div class="panel-footer text-right">
 				<a class="btn btn-primary" asp-controller="Note" asp-action="Index">List</a>
